--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@ Finish System F with a single namespace (using a sort judgement).
 
 Generalize the library to deal with multiple namespaces.
 
+On the master branch, try getting rid of the type class Var.
+
